[project]
name = "breakable-cuda-graphs"
version = "0.0.0"
description = "Breakable CUDA graphs for PyTorch"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "PyTorch Team", email = "packages@pytorch.org" }]
keywords = ["pytorch", "torch", "cuda", "cuda-graphs"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["torch"]

[project.urls]
Homepage = "https://github.com/pytorch/annex"
Issues = "https://github.com/pytorch/annex/issues"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["breakable_cuda_graphs"]
packages = []
